--- a/COMP123-S2016-ASSIGNMENT7/COMP123-S2016-ASSIGNMENT7.csproj
+++ b/COMP123-S2016-ASSIGNMENT7/COMP123-S2016-ASSIGNMENT7.csproj
@@ -102,6 +102,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StreamForm.resx">
+      <DependentUpon>StreamForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
